--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
           </div>
           <h3>Lab 1 Title</h3>
           <p>
-             <b><a href=lab1\q1.html>Q1</a>,<a href=lab1\q2.html>Q2</a>, and <a href=lab1\q3.html>Q3</a> HyperLink</b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+            <b>
+              <table style="width: 100%;">
+                <tbody>
+                  <tr>
+                    <td><a href=lab1\q1.html>Q1</a></td>
+                    <td><a href=lab1\q2.html>Q2</a></td>
+                    <td><a href=lab1\q3.html>Q3</a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </b>
           </p>
         </div>
       </div>
@@ -47,8 +56,7 @@
           </div>
           <h3>Lab 2 Title</h3>
           <p>
-             <b><a href="lab2\Rajpoot.html"> My Webpage </a></b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+             <b><a href="lab2\Rajpoot.html"> My Webpage </a></b>
           </p>
         </div>
       </div>
