--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           </div>
           <h3>Lab 3 Title</h3>
           <p>
-             <b>Q1, Q2, and Q3 HyperLink</b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+            <b><a href="lab3\RajpootCSS.html"> My Webpage </a></b>
           </p>
         </div>
       </div>
