--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
           </div>
           <h3>Lab 4 Title</h3>
           <p>
-             <b>Q1, Q2, and Q3 HyperLink</b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+            <b><a href="lab4\resume.html"> My Resume</a></b>
           </p>
         </div>
       </div>
