--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
           </div>
           <h3>Lab 5 Title</h3>
           <p>
-             <b>Q1, Q2, and Q3 HyperLink</b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+            <b><a href="lab\resume-12column.html"> My Resume (12 Column)</a></b>
           </p>
         </div>
       </div>
