--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <h3>Lab 5 Title</h3>
           <p>
-            <b><a href="lab\resume-12column.html"> My Resume (12 Column)</a></b>
+            <b><a href="lab5\resume-12column.html"> My Resume (12 Column)</a></b>
           </p>
         </div>
       </div>
