--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
           </div>
           <h3>Lab 6 Title</h3>
           <p>
-             <b>Q1, Q2, and Q3 HyperLink</b><br>Lorem psum dolor, sit amet consectetur adipisicing elit. Quisquam
-            consequatur necessitatibus eaque.
+             <b><a href="lab6\portfolio.html"> My Portfolio</a></b>
           </p>
         </div>
       </div>
